--- a/style.css
+++ b/style.css
@@ -9,11 +9,6 @@
     background-color: antiquewhite;
 }
 
-#hd {
-    width: 100vw;
-    height: 10vh ;
-    background-color:aqua
-}
 #mn {
     width: 100vw;
     height: 80vh ;
@@ -23,4 +18,80 @@
     width: 100vw;
     height: 10vh ;
     background-color: mediumpurple;
+}
+
+.hd-sec {
+    border : 1px solid black 
+}
+
+
+/*------------- header--------------*/
+
+#hd {
+    width: 100vw;
+    height: 10vh ;
+    background-color:aqua;
+    display: flex;
+}
+
+#hd-1 {
+    /* width: 20vw; */
+    flex: 2;
+   
+}
+
+#hd-2 {
+   /* width: 50vw; */
+  flex: 4;
+}
+
+#hd-3 {
+   /* width: 30vw; */
+    flex: 2;
+}
+
+/*------------- main--------------*/
+
+#mn {
+    width: 100vw;
+    height: 80vh;
+    background-color: darkgreen;
+    display : grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas: 
+    "mn-1 mn-4"
+    "mn-2 mn-4"
+    "mn-3 mn-4"
+    ;
+    gap: 1vh;
+}
+#mn-1 {
+    grid-area: mn-1;
+}
+#mn-2 {
+    grid-area: mn-2;
+}
+#mn-3 {
+    grid-area: mn-3;
+}
+#mn-4  {
+    grid-area: mn-4;
+}
+
+/*------------- footer--------------*/
+
+#ft {
+    width: 100vw;
+    height: 10vh ;
+    background-color: mediumpurple;
+    display: flex;
+    flex-direction: column;
+}
+
+#ft-1 {
+flex: 1;
+}
+#ft-2 {
+flex: 1;
 }
